@@ -2,7 +2,8 @@
 UTILNAME:=yaml
 PKGNAME:=ruamel.yaml
 INSTPKGNAME:=--pkg ruamel.yaml
-VERSION:=0.15.8.dev
+VERSION:=0.15.9.dev
+VERSIOND:=0.15.9.dev0
 
 include ~/.config/develop/Makefile.inc
 
